--- a/Frontend/src/styles/CurrencyRates.css
+++ b/Frontend/src/styles/CurrencyRates.css
@@ -5,7 +5,6 @@
 
 .currency-rates-main-container {
     flex-grow: 1; 
-    background-color: var(--bg-color);
     color: var(--text-color);
 }
 
@@ -45,7 +44,6 @@
 }
 
 .currency-rates-table-container {
-    background-color: var(--container-bg);
     color: var(--text-color);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
     overflow-x: auto; 
@@ -73,16 +71,19 @@
     top: 0;
     text-align: center;
     border-right: 1px solid var(--bg-color);
-    border-bottom: 5px solid var(--bg-color);
 }
 
 
-.currency-rates-table thead tr th:first-child {
-    border-top-left-radius: 8px;
+.currency-rates-table .table-spacer-row td {
+  background-color: transparent;
+  height: 5px;
+  border: none;
+  padding: 0;
 }
-.currency-rates-table thead tr th:last-child {
-    border-top-right-radius: 8px;
-    border-right: none; 
+
+.currency-rates-table .table-spacer-row:hover,
+.currency-rates-table .table-spacer-row:hover td {
+  background-color: transparent !important;
 }
 
 
@@ -96,6 +97,7 @@
 }
 
 .currency-rates-table td {
+    background-color: var(--container-bg);
     padding: 12px 15px;
     text-align: center;
     color: var(--text-color);
