--- a/Frontend/src/styles/TransactionsPage.css
+++ b/Frontend/src/styles/TransactionsPage.css
@@ -65,7 +65,6 @@
 }
 
 .transactions-table-container {
-    background-color: var(--container-bg);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow: auto; 
     flex-grow: 1; 
@@ -97,7 +96,6 @@
     
     border-right: 1px solid var(--bg-color);
     text-align: center;
-    border-bottom: 10px solid var(--bg-color);
     background-color: var(--container-bg); 
 }
 
@@ -207,6 +205,18 @@
     background-color: var(--input-border-focus);
 }
 
+.transactions-table .table-spacer-row td {
+  background-color: transparent;
+  height: 5px;
+  border: none;
+  padding: 0;
+}
+
+.transactions-table .table-spacer-row:hover,
+.transactions-table .table-spacer-row:hover td {
+  background-color: transparent !important;
+}
+
 .transactions-table td {
     padding: 5px 5px;
     white-space: normal;
@@ -219,6 +229,7 @@
     border-right: 1px solid var(--bg-color);
     text-align: center;
     font-size: var(--font-size-table-text);
+    background-color: var(--container-bg);
 }
 
 .sorting-indicator-row td {
