--- a/Frontend/src/components/Employees/EmployeesModal/RequisitesTab.css
+++ b/Frontend/src/components/Employees/EmployeesModal/RequisitesTab.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-bottom: 15px;
 }
 
 .requisites-tab-wrapper .requisites-row {
@@ -19,6 +18,7 @@
     font-size: 13px;
     font-weight: 500;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 
@@ -27,7 +27,6 @@
     flex-grow: 1;          
     padding: 10px 0;
     background-color: rgb(20, 27, 46);
-    text-transform: uppercase;
 }
 
 
@@ -36,7 +35,7 @@
     align-items: center;
     box-sizing: border-box;
     padding-bottom: 5px;
-    padding-left: 5px;
+    padding-left: 1px;
 }
 
 
@@ -46,16 +45,25 @@
 
 
 
+.requisites-tab-wrapper .header-content-wrapper > .requisites-cell:nth-child(1){
+    text-align: center;
+    padding-right: 15px;
+    padding-left: 15px;
+    flex: 25;
+}
 
-
-.requisites-tab-wrapper .header-content-wrapper > .requisites-cell:nth-child(1),
 .requisites-tab-wrapper .requisites-row:not(.header-row) > .requisites-cell:nth-child(1) {
     flex: 15; 
     flex-basis: 0;
     padding-right: 15px; 
 }
 
-.requisites-tab-wrapper .header-content-wrapper > .requisites-cell:nth-child(2),
+.requisites-tab-wrapper .header-content-wrapper > .requisites-cell:nth-child(2){
+    text-align: center;
+    padding-right: 15px;
+    flex: 25;
+}
+
 .requisites-tab-wrapper .requisites-row:not(.header-row) > .requisites-cell:nth-child(2) {
     flex: 25;
     flex-basis: 0;
@@ -78,10 +86,9 @@
 
 .requisites-tab-wrapper .requisites-cell.action-cell {
     flex: none; 
-    flex-basis: 40px;
+    flex-basis: 30px;
     flex-shrink: 0;
     justify-content: center;
-    padding-left: 10px;
     padding-bottom: 0; 
 }
 
