--- a/Frontend/src/styles/AssetsPage.css
+++ b/Frontend/src/styles/AssetsPage.css
@@ -199,6 +199,20 @@
 
 .total-in-currency-сard {
     margin-right: 30px;
+    padding: 2px 8px;
+    border-radius: 12px;
+    font-size: 12px;
+    background: #444;
+    color: #fff;
+}
+
+.total-from-settings-сard{
+    margin-right: 30px;
+    padding: 2px 8px;
+    border-radius: 12px;
+    font-size: 12px;
+    background: #444;
+    color: #fff;
 }
 
 .total-from-settings-card {
@@ -324,9 +338,8 @@
 .card-size-selector {
     display: flex;
     align-items: center;
-    gap: 10px;
-    margin-left: 20px;
-    padding: 0 20px;
+    gap: 15px;
+    padding: 0 15px;
     border-right: 1px solid var(--border--color);
 }
 
