--- a/Frontend/src/styles/EmployeesPage.css
+++ b/Frontend/src/styles/EmployeesPage.css
@@ -128,7 +128,7 @@
 
 .employees-table th:nth-child(1),
 .employees-table td:nth-child(1){
-  width: 170px; 
+  width: 150px; 
 }
 
 
@@ -141,7 +141,6 @@
 .employees-table th:nth-child(3),
 .employees-table td:nth-child(3){
   width: 100px; 
-  text-align: center;
 }
 
 
@@ -153,7 +152,7 @@
 
 .employees-table th:nth-child(5),
 .employees-table td:nth-child(5){
-  width: 100px; 
+  width: 140px; 
 }
 
 .employees-table th:nth-child(6),
@@ -205,7 +204,7 @@
 
 .employees-table th:nth-child(15),
 .employees-table td:nth-child(15){
-  width: 170px; 
+  width: 150px; 
 }
 
 .employees-table th:nth-child(16),
@@ -292,27 +291,16 @@
   font-size: 16px;
   font-weight: bold;
   color: #a0a0a0;
-  border: 1px solid var(--border--color);
+  opacity: 0.9;
+  background-color: var(--bg-color);
+  margin-bottom: 10px;
 }
-.cards-container {
-    margin-top: 10px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 16px; 
-    padding: 0 10px;
-}
+
 
 .employees-card-view {
     width: 100%;
 }
-.card-group-header {
-    cursor: pointer;
-    padding: 10px;
-    user-select: none;
-    font-size: 16px;
-    font-weight: bold;
-    color: #a0a0a0;
-}
+
 .cards-container {
     margin-top: 0;
     display: grid;
