--- a/Frontend/src/styles/ExecutorsPage.css
+++ b/Frontend/src/styles/ExecutorsPage.css
@@ -2,7 +2,6 @@
     display: flex;
     min-height: 100vh;
     color: var(--text-color);
-    background-color: var(--bg-color);
 }
 
 
@@ -30,7 +29,7 @@
     margin: 0;
     color: var(--text-color);
     text-transform: uppercase;
-    padding: 0 35px;
+    padding: 0 15px;
     display: flex;
     align-items: center;
     border-right: 1px solid var(--border--color);
@@ -39,8 +38,8 @@
 
 .view-mode-buttons {
     display: flex;
-    gap: 0;
-    padding: 0 20px;
+    gap: 15px;
+    padding: 0 15px;
     border-right: 1px solid var(--border--color);
     height: 100%;
     align-items: center;
@@ -92,7 +91,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    padding: 0 25px 0 55px;
+    padding: 0 15px 0 15px;
     border-left: 1px solid var(--border--color);
     height: 100%;
     border-top-left-radius: 0;
@@ -104,7 +103,6 @@
 }
 
 .executors-table-container {
-    background-color: var(--container-bg);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow-x: auto;
 }
@@ -115,9 +113,105 @@
     border-spacing: 0;
     text-align: left;
     color: var(--container-text-color);
-    table-layout: auto;
-    min-width: 1200px;
+    table-layout: fixed;
 }
+
+.executors-table th:nth-child(1),
+.executors-table td:nth-child(1){
+    width: 60px;
+}
+
+.executors-table th:nth-child(2),
+.executors-table td:nth-child(2){
+    width: 40px;
+    text-align: center;
+}
+
+
+.executors-table th:nth-child(3),
+.executors-table td:nth-child(3){
+    width: 70px;
+}
+
+.executors-table th:nth-child(4),
+.executors-table td:nth-child(4){
+    width: 200px;
+}
+
+.executors-table th:nth-child(5),
+.executors-table td:nth-child(5){
+    width: 175px;
+}
+
+
+.executors-table th:nth-child(6),
+.executors-table td:nth-child(6){
+    width: 175px;
+}
+
+
+.executors-table th:nth-child(7),
+.executors-table td:nth-child(7){
+    width: 120px;
+}
+
+.executors-table th:nth-child(8),
+.executors-table td:nth-child(8){
+    width: 50px;
+    text-align: center;
+}
+
+.executors-table th:nth-child(9),
+.executors-table td:nth-child(9){
+    width: 110px;
+    text-align: center;
+}
+
+.executors-table th:nth-child(10),
+.executors-table td:nth-child(10){
+    width: 50px;
+    text-align: center;
+}
+
+
+.executors-table th:nth-child(11),
+.executors-table td:nth-child(11){
+    width: 110px;
+    text-align: center;
+}
+
+.executors-table th:nth-child(12),
+.executors-table td:nth-child(12){
+    width: 50px;
+    text-align: center;
+}
+
+.executors-table th:nth-child(13),
+.executors-table td:nth-child(13){
+    width: 110px;
+    text-align: center;
+}
+
+.executors-table th:nth-child(14),
+.executors-table td:nth-child(14){
+    width: 50px;
+    text-align: center;
+}
+
+.executors-table th:nth-child(15),
+.executors-table td:nth-child(15){
+    width: 70px;
+    text-align: center;
+}
+
+
+.executors-table .table-spacer-row td{
+    background-color: transparent;
+    height: 5px;
+    border: none;
+    padding: 0;
+}
+
 
 .executors-table thead {
     background-color: var(--container-bg);
@@ -125,22 +219,14 @@
 }
 
 .executors-table th {
-    padding: 12px 15px;
-    white-space: nowrap;
+    padding: 8px 8px;
     font-weight: 600;
     position: sticky;
+    text-align: center;
     top: 0;
     border-right: 1px solid var(--bg-color);
-    border-bottom: 10px solid var(--bg-color);
 }
 
-.executors-table thead tr th:first-child {
-    border-top-left-radius: 8px;
-}
-
-.executors-table thead tr th:last-child {
-    border-top-right-radius: 8px;
-}
 
 .executors-table tbody tr.executor-row {
     border-bottom: 1px solid var(--border--color);
@@ -156,7 +242,7 @@
 }
 
 .executors-table td {
-    padding: 12px 15px;
+    padding: 8px 8px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -166,6 +252,7 @@
     border-top: 1px solid var(--bg-color);
     border-right: 1px solid var(--bg-color);
     font-size: var(--font-size-table-text);
+    background-color: var(--container-bg);
 }
 
 .view-mode-buttons {
